<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.hafiztaruligani.gamesday.presentation.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_background"
        android:paddingHorizontal="@dimen/primary_padding_horizontal"
        android:paddingVertical="@dimen/primary_padding_vertical"
        tools:context=".presentation.home.HomeFragment">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded_background"
            android:backgroundTint="@color/second_background"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="24dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:srcCompat="@drawable/ic_baseline_search_24"
            android:contentDescription="@string/default_content_description" />

        <EditText
            android:id="@+id/search"
            style="@style/font_big"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:background="@color/second_background"
            android:gravity="center_vertical"
            android:hint="@string/search"
            android:inputType="text"
            android:maxLines="1"
            android:text="@={viewModel.query}"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toStartOf="@+id/btn_delete"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/view"
            android:importantForAutofill="no" />

        <ImageView
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:clickable="true"
            android:contentDescription="@string/default_content_description"
            android:focusable="true"
            android:onClick="@{() -> viewModel.reset()}"
            android:paddingHorizontal="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@id/view"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:srcCompat="@drawable/ic_baseline_close_24" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/games_rc"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/message"
            style="@style/font_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/network_is_unstable"
            android:textColor="@color/secondary_font"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/retry"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <TextView
            android:id="@+id/retry"
            style="@style/font_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/retry"
            android:textColor="@color/primary"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/message"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_upward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_arrow_upward_24"
            android:tint="@color/primary"
            android:backgroundTint="@color/floating_button_color"
            android:foregroundTint="@color/floating_button_color"
            app:backgroundTint="@color/floating_button_color"
            app:rippleColor="@null"
            android:elevation="0dp"
            app:elevation="0dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/default_content_description"
            android:visibility="gone"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>